# Crypto_Tracker

./: .env.example  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  резюме.docx
.github/workflows/: build-packages.yml  docker-publish.yml
app/: Dockerfile  __init__.py
app/backend/: .env  __init__.py  pyproject.toml  requirements.txt
app/backend/src/: __init__.py  cli.py  cmc_client.py  config.py  http_client.py  main.py  models.py  router.py
app/bot/: Dockerfile  __init__.py  bot.py  cli.py  config.py  pyproject.toml  requirements.txt  router.py
